--- a/DaisyX/localization/en.yaml
+++ b/DaisyX/localization/en.yaml
@@ -186,20 +186,18 @@ STRINGS:
     emoji_not_allowed: "I'm sorry, but admin roles can't have emojis 😞"
 
   pm_menu:
-    start_hi_group: 'Hey there! My name is 𝑹𝒆𝒏𝒈𝒐𝒌𝒖 𝑺𝒂𝒏'
-    start_hi: "Yo, Wassup I'm Rengoku Kyujoro, A powerfull Hashira Management Bot which helps you maintain your Group. I'm here to serve @anime_realms_chats but could help you also.
-
-Powered by @anime_realms!"
+    start_hi_group: 'Hey there! My name is Rengoku Kyujoro'
+    start_hi: "Hey there! My name is <b>Rengoku Kyujoro.</b>\nI can help manage your groups with useful features, feel free to add me to your groups!"
     btn_source: "📜 Dev"
     btn_help: "❔ Help"
     btn_lang: "🇺🇸 Language"
-    btn_channel: "🙋‍♀️  Rengoku Kyujoro News"
-    btn_group: "👥  Rengoku Kyujoro Support"
+    btn_channel: "🙋‍♀️ Rengoku Kyujoro News"
+    btn_group: "👥 Rengoku Kyujoro Support"
     btn_group_help: "Click me for help!"
     back: "🏃‍♂️ Back"
 
     # /help
-    help_header: "Hi Boss! I'm Rengoku Kyujoro
+    help_header: "Hi Boss! I'm <b>Rengoku Kyujoro</b>. An anime themed super powerful group management bot with many handy tools. So why are you waiting. Let me to assist you"
     click_btn: Click here
 
   disable:
