--- a/DaisyX/localization/en.yaml
+++ b/DaisyX/localization/en.yaml
@@ -188,7 +188,7 @@ STRINGS:
   pm_menu:
     start_hi_group: 'Hey there! My name is Rengoku Kyujoro'
     start_hi: "Hey there! My name is <b>Rengoku Kyujoro.</b>\nI can help manage your groups with useful features, feel free to add me to your groups!"
-    btn_source: "📜 Dev"
+    btn_source: "📜 Source code"
     btn_help: "❔ Help"
     btn_lang: "🇺🇸 Language"
     btn_channel: "🙋‍♀️ Rengoku Kyujoro News"
